--- a/overrides/main.html
+++ b/overrides/main.html
@@ -57,7 +57,7 @@ as the main headline.
         <!-- Giscus -->
         <h2 id="__comments">{{ lang.t("meta.comments") }}</h2>
         <script src="https://giscus.app/client.js"
-                data-repo="zhanbao2000/blog"
+                data-repo="cloudinwind/cloudinwind.github.io"
                 data-repo-id="R_kgDOHIZK7A"
                 data-category="Announcements"
                 data-category-id="DIC_kwDOHIZK7M4COdSe"
@@ -66,6 +66,22 @@ as the main headline.
                 data-emit-metadata="0"
                 data-input-position="top"
                 data-theme="light"
+                data-lang="zh-CN"
+                data-loading="lazy"
+                crossorigin="anonymous"
+                async>
+        </script>
+        <script src="https://giscus.app/client.js"
+                data-repo="cloudinwind/cloudinwind.github.io"
+                data-repo-id="R_kgDOMfH5JQ"
+                data-category="General"
+                data-category-id="DIC_kwDOMfH5Jc4CiG2I"
+                data-mapping="pathname"
+                data-strict="0"
+                data-reactions-enabled="1"
+                data-emit-metadata="0"
+                data-input-position="bottom"
+                data-theme="light_protanopia"
                 data-lang="zh-CN"
                 data-loading="lazy"
                 crossorigin="anonymous"
